2014-12-09  Jamison Hope  <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* match1.scm: New files with tests for conditional binding.
	* Makefile.am: Update accordingly.

2014-12-08  Per Bothner  <per@bothner.com>

	* inlining.expected: Update for new and improved implementation
	of '(if (and ...) ...)'.

2014-12-03  Seth Alves <alves@hungry.com>

	* macros1.scm: New test.

2014-12-01  Jamison Hope  <jrh@theptrgroup.com>

	* lib-test.scm: Add test for char-set<= bug reported by Seth
	Alves.

2014-11-26   Seth Alves <alves@hungry.com>
	     Per Bothner  <per@bothner.com>

	* lib-export.scm: New test for 'guard'.
	* lib-colon2.scm: New test for names with colons.

2014-11-24  Seth Alves <alves@hungry.com>
	    Per Bothner  <per@bothner.com>

	* lib-colon1.scm: New test for named is colon in library.
	* lib-export.scm: New test for exporting define-syntax,
	define-record-type, and let-values from a library.
	* Makefile.am (SCRIPTS_TO_RUN): Update accordindgly.

2014-11-22  Per Bothner  <per@bothner.com>

	* system-test.scm: Add test using shell and quotes.

2014-11-18  Per Bothner  <per@bothner.com>

	* system-test.scm: Use kawa.sh, in case we were built without
	the kawa front-end executable.

	* Makefile.am (EXTRA_DIST): Fix typo.

2014-11-17  Per Bothner  <per@bothner.com>

	* r7rs-tests.scm: Downcasing capital dotted I is no longer expected
	to fail on Java 8, following an update of the latter.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* quaternion-test.scm: New file with test cases for quaternions.
	* Makefile.am: Update accordingly.

2014-11-16  Per Bothner  <per@bothner.com>

	* aux-libs.scm: New file, defined two libraries.
	* lib-impsrc1.scm: New test of import-from-source of aux-libs.scm
	* lib-impsrc2.scm: new test of bad import.
	* lib-dup.scm: New test of file with duplicate libraries.
	* Makefile.am: Update accordingly.

2014-11-13  Per Bothner  <per@bothner.com>

	* num-test.scm: Add test for Complex:equals bug